feat: implement export files & add a menu bar

--- a/src/components/LocalProjects/style.css
+++ b/src/components/LocalProjects/style.css
@@ -1,7 +1,7 @@
-button > svg { 
+button.relative > svg { 
     display: none;
 }
 
-button:hover > svg { 
+button.relative:hover > svg { 
     display: inline-block;
 }
