--- a/src/components/Sheet/style.css
+++ b/src/components/Sheet/style.css
@@ -17,14 +17,16 @@
 }
 
 .ht-root-wrapper .wtHider {
-    /* background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-    padding:28px;
-    border-radius:14px;
-    border: 1px solid rgba(255,255,255,0.04);
+    /* 
     display:grid;
     grid-template-columns:1fr 320px;
     gap:20px;
-    align-items:center; */
+    align-items:center;
+
+    background: linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
+    padding:28px;
+    border-radius:14px;
+    border: 1px solid rgba(255,255,255,0.04); */
     box-shadow: 0 10px 30px rgba(2,6,23,0.6), inset 0 1px 0 rgba(255,255,255,0.02);
     backdrop-filter: blur(6px) saturate(120%);
 }
