--- a/src/index.css
+++ b/src/index.css
@@ -36,9 +36,9 @@ body {
     -moz-osx-font-smoothing:grayscale;
     color: #fff;
     overflow: scroll;
-    width: 100vw;
     height: fit-content;
     overflow-x: hidden;
+    /* width: 100vw; */
 }
 
 .card {
