--- a/src/pages/Translate/style.css
+++ b/src/pages/Translate/style.css
@@ -1,6 +1,5 @@
 #root:has(#translate) {
-    height: 100vh;
-    padding: 5%;
+    min-height: 100vh;
 }
 
 main .overflow-y-scroll::-webkit-scrollbar {
